plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.13'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'doubleni'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.h2database:h2'

    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //spring security
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    testImplementation 'org.springframework.security:spring-security-test'

    //JWT Token
    implementation 'com.auth0:java-jwt:4.2.1'
    implementation(group: 'io.jsonwebtoken', name: 'jjwt', version: '0.11.5')
    implementation('io.jsonwebtoken:jjwt:0.9.1')

    //OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Gson library
    implementation 'com.google.code.gson:gson:2.8.7'

    //swagger
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    implementation 'org.jetbrains:annotations:24.0.0'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    // 스프링 데이터 JPA
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
////    runtimeOnly 'com.h2database:h2' //  로컬에서 테스트용으로만 사용
//    compileOnly 'org.projectlombok:lombok:'
//    annotationProcessor 'org.projectlombok:lombok'
//    runtimeOnly 'com.mysql:mysql-connector-j'
//
//    // html 파일을 컴파일만 해도 재시작 없이 view파일 변경이 가능
//    implementation 'org.springframework.boot:spring-boot-devtools'
//
//    // JSON
//    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
//    implementation 'com.google.code.gson:gson:2.8.9'
//
//    // Thymeleaf, Validation
//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
//    implementation 'org.springframework.boot:spring-boot-starter-validation'
//
//    // API 호출 및 XML to JSON 변환 수행
//    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
//    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.3'
//
//     // AWS
//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    implementation 'commons-io:commons-io:2.6'

}

tasks.named('test') {
    useJUnitPlatform()
}
